--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -1,3 +1,5 @@
+<% include partials/header %>
+
 <h1>This is the campgrounds page</h1>
 
 <div>
@@ -9,3 +11,5 @@
 
 </div>
 <%}); %>
+
+<% include partials/footer %>
