--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -2,6 +2,8 @@
 
 <h1>This is the campgrounds page</h1>
 
+<a href="/campgrounds/new"> Add New Campground</a>
+
 <div>
 <% campgrounds.forEach(function(campground) { %>
 <li>
