--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,12 +1,19 @@
 <% include partials/header %>
 
 <h1>Create a New Campground</h1>
-
-<form action="/campgrounds" method="POST">
-    <input type="text" name="name" placeholder="name">
-    <input type="text" name="image" placeholder="image url">
-    <button>Submit!</button>
-</form>
+<div style="widt:30%;margin:0 auto;">
+    <form  action="/campgrounds" method="POST">
+        <div class="form-group"> 
+        <input type="text" name="name" placeholder="name">
+        </div>
+        <div class="form-group"> 
+        <input type="text" name="image" placeholder="image url">
+        </div>
+        <div class="form-group">
+        <button class="btn btn-lg btn-primary btn-block">Submit!</button>
+        </div>
+    </form>
+</div>
 
 <a href="/campgrounds"> Go Back</a>
 
