--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,10 +4,10 @@
 <div style="widt:30%;margin:0 auto;">
     <form  action="/campgrounds" method="POST">
         <div class="form-group"> 
-        <input type="text" name="name" placeholder="name">
+        <input type="text" name="ame" placeholder="Name">
         </div>
         <div class="form-group"> 
-        <input type="text" name="image" placeholder="image url">
+        <input type="text" name="image" placeholder="Image url">
         </div>
         <div class="form-group">
         <button class="btn btn-lg btn-primary btn-block">Submit!</button>
